src/styles/SettingsPanel.css
.settings-panel {
  display: flex; 
  flex-direction: column;
  margin: 20px;
}

.settings-panel > header.primary {
  color:  #333;
  font-weight: bold;
}

.settings-panel section.data-section {
  margin-top: 20px;
  color: #333;
}

.settings-panel .data-header {
  /*font-size: 15px;*/
}

.settings-panel .data-subheader {
  margin-bottom: 5px;
  font-size: 14px;
}

.settings-panel .data-subheader,
.settings-panel .data-header + .data-row {
  margin-top: 10px;
}

.settings-panel .data-row {
  display: flex;
  flex-direction: row;
  font-size: 13px;
  padding-left: 10px;
}

.settings-panel .data-row + .data-row {
  margin-top: 3px;
}

.settings-panel .data-row label {
  margin-right: 5px;
  /*color: #4a3822;*/
  color: #40301b;
}

.settings-panel .data-row .value,
.settings-panel .select-with-custom-option select,
.settings-panel select.settings-select,
.settings-panel .select-with-custom-option .custom-value-input {
  /*color: #814e0e;*/
  color: #7a490b;
  font-size: 13px;
}

.settings-panel .select-with-custom-option select,
.settings-panel select.settings-select,
.settings-panel .select-with-custom-option .custom-value-input {
  background-color: #fffbf5;
  border: 1px solid #93887a;
  border-radius: 3px;
  /*border: 1px solid #40301b;*/
}

.settings-panel section.data-section.coords-display .data-row label {
  width: 60px;
}

.settings-panel .select-with-custom-option button {
  color: #444;
  background-color: #eee;
  background-color: #efebe5;
  border: 1px solid #999;
  border-radius: 3px;
}

section.data-section + header.primary {
    margin-top: 20px;
}

